# emot-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: deep-research-report.md
examples/: README.md  mock_demo.py
scripts/: install.sh
src/emot_llm/: appraisal.py  cli.py  config.py  dynamics.py  llm_backends.py  logging_utils.py  memory.py  personality.py  state.py  tree.py  visualization.py  webcam.py
src/emot_llm/personalities/: __init__.py  emergent.md  genz-hype.md  mirror.md  navigator.md  ramu.md
tests/: test_appraisal.py  test_backend_adapters.py  test_cli_title.py  test_config.py  test_memory.py  test_memory_tree.py  test_personality.py  test_state_dynamics.py  test_tree_and_backends.py
